LDEV-4900 Mark autosave result as final and copy results to non leaders on leader's force completion
* Finalize non-leaders on leader's finish or force-completion