@@ -74,12 +74,14 @@ import org.lamsfoundation.lams.web.util.AttributeNames;
 import org.lamsfoundation.lams.web.util.SessionMap;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.context.WebApplicationContext;
 
 import com.fasterxml.jackson.databind.node.ArrayNode;
@@ -401,10 +403,6 @@ public class QaLearningController implements QaAppConstants {
 
     /**
      * validates the learning mode parameters
-     *
-     * @param request
-     * @param mapping
-     * @return ActionForward
      */
     protected void validateParameters(HttpServletRequest request,
 	    @ModelAttribute("qaLearningForm") QaLearningForm qaLearningForm) {
@@ -452,14 +450,6 @@ public class QaLearningController implements QaAppConstants {
 
     /**
      * submits users responses
-     *
-     * @param mapping
-     * @param form
-     * @param request
-     * @param response
-     * @return
-     * @throws IOException
-     * @throws ServletException
      */
     @RequestMapping("/submitAnswersContent")
     public String submitAnswersContent(@ModelAttribute("qaLearningForm") QaLearningForm qaLearningForm,
@@ -588,17 +578,9 @@ public class QaLearningController implements QaAppConstants {
 
     /**
      * auto saves responses
-     *
-     * @param mapping
-     * @param form
-     * @param request
-     * @param response
-     * @return
-     * @throws IOException
-     * @throws ServletException
      */
     @RequestMapping("/autoSaveAnswers")
-    @ResponseBody
+    @ResponseStatus(HttpStatus.OK)
     public void autoSaveAnswers(@ModelAttribute("qaLearningForm") QaLearningForm qaLearningForm,
 	    HttpServletRequest request) throws IOException, ServletException {
 	String toolSessionID = request.getParameter(AttributeNames.PARAM_TOOL_SESSION_ID);
@@ -636,14 +618,6 @@ public class QaLearningController implements QaAppConstants {
 
     /**
      * enables retaking the activity
-     *
-     * @param mapping
-     * @param form
-     * @param request
-     * @param response
-     * @return
-     * @throws IOException
-     * @throws ServletException
      */
     @RequestMapping("/redoQuestions")
     public String redoQuestions(@ModelAttribute("qaLearningForm") QaLearningForm qaLearningForm,
@@ -694,8 +668,6 @@ public class QaLearningController implements QaAppConstants {
      * answers screen, otherwise goes straight to the reflection screen (if any).
      *
      * @return Learner Report for a session
-     * @throws IOException
-     * @throws ServletException
      */
     @RequestMapping("/storeAllResults")
     public String storeAllResults(@ModelAttribute("qaLearningForm") QaLearningForm qaLearningForm,
@@ -885,12 +857,6 @@ public class QaLearningController implements QaAppConstants {
     /**
      * Get the answer from the form and copy into DTO. Set up the next question. If the current question is required and
      * the answer is blank, then just persist the error and don't change questions.
-     *
-     * @param form
-     * @param request
-     * @param generalLearnerFlowDTO
-     * @param getNextQuestion
-     * @return
      */
     private Object[] storeSequentialAnswer(QaLearningForm qaLearningForm, HttpServletRequest request,
 	    GeneralLearnerFlowDTO generalLearnerFlowDTO, boolean getNextQuestion) {
@@ -1056,7 +1022,6 @@ public class QaLearningController implements QaAppConstants {
     public String endLearning(@ModelAttribute("qaLearningForm") QaLearningForm qaLearningForm,
 	    HttpServletRequest request, HttpServletResponse response)
 	    throws IOException, ServletException, ToolException {
-
 	LearningUtil.saveFormRequestData(request, qaLearningForm);
 
 	String toolSessionID = request.getParameter(AttributeNames.PARAM_TOOL_SESSION_ID);
@@ -1065,12 +1030,6 @@ public class QaLearningController implements QaAppConstants {
 	String userID = request.getParameter("userID");
 	qaLearningForm.setUserID(userID);
 
-	QaSession qaSession = qaService.getSessionById(new Long(toolSessionID).longValue());
-
-	QaQueUsr qaQueUsr = qaService.getUserByIdAndSession(new Long(userID), qaSession.getQaSessionId());
-	qaQueUsr.setLearnerFinished(true);
-	qaService.updateUser(qaQueUsr);
-
 	/*
 	 * The learner is done with the tool session. The tool needs to clean-up.
 	 */
@@ -1078,33 +1037,17 @@ public class QaLearningController implements QaAppConstants {
 	/* get back login user DTO */
 	UserDTO user = (UserDTO) ss.getAttribute(AttributeNames.USER);
 
-	qaSession.setSession_end_date(new Date(System.currentTimeMillis()));
-	qaSession.setSession_status(QaAppConstants.COMPLETED);
-	qaService.updateSession(qaSession);
-
 	String httpSessionID = qaLearningForm.getHttpSessionID();
 	// request.getSession().removeAttribute(httpSessionID);
 	qaLearningForm.setHttpSessionID(httpSessionID);
-
 	qaLearningForm.resetAll();
 
-	String nextActivityUrl = qaService.leaveToolSession(new Long(toolSessionID),
-		new Long(user.getUserID().longValue()));
+	String nextActivityUrl = qaService.finishToolSession(Long.valueOf(toolSessionID), user.getUserID().longValue());
 	response.sendRedirect(nextActivityUrl);
 
 	return null;
     }
 
-    /**
-     *
-     * @param qaLearningForm
-     * @param request
-     * @param response
-     * @return
-     * @throws IOException
-     * @throws ServletException
-     * @throws ToolException
-     */
     @RequestMapping("/submitReflection")
     public String submitReflection(@ModelAttribute("qaLearningForm") QaLearningForm qaLearningForm,
 	    HttpServletRequest request, HttpServletResponse response)
@@ -1146,15 +1089,6 @@ public class QaLearningController implements QaAppConstants {
 	return endLearning(qaLearningForm, request, response);
     }
 
-    /**
-     *
-     * @param qaLearningForm
-     * @param request
-     * @return
-     * @throws IOException
-     * @throws ServletException
-     * @throws ToolException
-     */
     @RequestMapping("/forwardtoReflection")
     public String forwardtoReflection(@ModelAttribute("qaLearningForm") QaLearningForm qaLearningForm,
 	    HttpServletRequest request) throws IOException, ServletException, ToolException {
